--- a/InventoryManagement.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/InventoryManagement.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model FailTracker.Web.Models.ExternalLoginConfirmationViewModel
+﻿@model InventoryManagement.Web.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
