--- a/InventoryManagement.Web/Views/Account/Login.cshtml
+++ b/InventoryManagement.Web/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model FailTracker.Web.Models.LoginViewModel
+﻿@model InventoryManagement.Web.Models.LoginViewModel
 
 @{
     ViewBag.Title = "Log in";
@@ -47,9 +47,9 @@
             }
         </section>
     </div>
-    <div class="col-md-4">
+    @*<div class="col-md-4">
         <section id="socialLoginForm">
             @Html.Partial("_ExternalLoginsListPartial", new { Action = "ExternalLogin", ReturnUrl = ViewBag.ReturnUrl })
         </section>
-    </div>
+    </div>*@
 </div>
