--- a/InventoryManagement.Web/Views/Account/Register.cshtml
+++ b/InventoryManagement.Web/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model FailTracker.Web.Models.RegisterViewModel
+﻿@model InventoryManagement.Web.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
