--- a/InventoryManagement.Web/Views/Issue/AssignmentStatsWidget.cshtml
+++ b/InventoryManagement.Web/Views/Issue/AssignmentStatsWidget.cshtml
@@ -1,4 +1,4 @@
-﻿@model FailTracker.Web.Models.Issue.AssignmentStatsViewModel[]
+﻿@model InventoryManagement.Web.Models.Issue.AssignmentStatsViewModel[]
 
 <h3>All Issues</h3>
 <table class="table table-hover">
