--- a/InventoryManagement.Web/Views/Issue/CreatedByYouWidget.cshtml
+++ b/InventoryManagement.Web/Views/Issue/CreatedByYouWidget.cshtml
@@ -1,4 +1,4 @@
-﻿@model FailTracker.Web.Models.Issue.IssueSummaryViewModel[]
+﻿@model InventoryManagement.Web.Models.Issue.IssueSummaryViewModel[]
 
 <h3>Created By You</h3>
 <table class="table table-hover">
