--- a/InventoryManagement.Web/Views/Issue/Edit.cshtml
+++ b/InventoryManagement.Web/Views/Issue/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model FailTracker.Web.Models.Issue.EditIssueForm
+﻿@model InventoryManagement.Web.Models.Issue.EditIssueForm
 @{
     ViewBag.Title = "Edit " + Model.Subject;
 }
