--- a/InventoryManagement.Web/Views/Issue/New.cshtml
+++ b/InventoryManagement.Web/Views/Issue/New.cshtml
@@ -1,4 +1,4 @@
-﻿@model FailTracker.Web.Models.Issue.NewIssueForm
+﻿@model InventoryManagement.Web.Models.Issue.NewIssueForm
 
 @{
     ViewBag.Title = "New Issue";
