--- a/InventoryManagement.Web/Views/Issue/View.cshtml
+++ b/InventoryManagement.Web/Views/Issue/View.cshtml
@@ -1,4 +1,4 @@
-﻿@model FailTracker.Web.Models.Issue.IssueDetailsViewModel
+﻿@model InventoryManagement.Web.Models.Issue.IssueDetailsViewModel
 
 @{
     ViewBag.Title = Model.Subject;
