--- a/InventoryManagement.Web/Views/Shared/EditorTemplates/IssueType.cshtml
+++ b/InventoryManagement.Web/Views/Shared/EditorTemplates/IssueType.cshtml
@@ -1,5 +1,5 @@
-﻿@using FailTracker.Web.Domain
-@model FailTracker.Web.Domain.IssueType
+﻿@using InventoryManagement.Web.Domain
+@model IssueType
 @{
     var options = Enum.GetValues(typeof(IssueType))
     .Cast<IssueType>()
