--- a/InventoryManagement.Web/Views/Account/Manage.cshtml
+++ b/InventoryManagement.Web/Views/Account/Manage.cshtml
@@ -1,4 +1,4 @@
-﻿@using FailTracker.Web.Models;
+﻿@using InventoryManagement.Web.Models;
 @using Microsoft.AspNet.Identity;
 @{
     ViewBag.Title = "Manage Account";
