--- a/InventoryManagement.Web/Views/Issue/YourIssuesWidget.cshtml
+++ b/InventoryManagement.Web/Views/Issue/YourIssuesWidget.cshtml
@@ -1,4 +1,4 @@
-﻿@model FailTracker.Web.Models.Issue.IssueSummaryViewModel[]
+﻿@model InventoryManagement.Web.Models.Issue.IssueSummaryViewModel[]
 
 <h3>Assigned To You</h3>
 <table class="table table-hover">
