--- a/InventoryManagement.Web/Views/Shared/EditorTemplates/UserID.cshtml
+++ b/InventoryManagement.Web/Views/Shared/EditorTemplates/UserID.cshtml
@@ -1,5 +1,5 @@
-﻿@using FailTracker.Web.Data
-@using FailTracker.Web.Infrastructure
+﻿@using InventoryManagement.Web.Data
+@using InventoryManagement.Web.Infrastructure
 @model string
 @{
     var dbContext = Context.GetContainer().GetInstance<ApplicationDbContext>();
