--- a/InventoryManagement.Web/Views/Shared/_Alerts.cshtml
+++ b/InventoryManagement.Web/Views/Shared/_Alerts.cshtml
@@ -1,4 +1,4 @@
-﻿@using FailTracker.Web.Infrastructure.Alerts
+﻿@using InventoryManagement.Web.Infrastructure.Alerts
 @if (TempData.GetAlerts().Any())
 {
     <div class="container alert-container">
