--- a/InventoryManagement.Web/Views/Shared/_Layout.cshtml
+++ b/InventoryManagement.Web/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Fail Tracker", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Inventory Management System", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -24,6 +24,7 @@
                     {
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("New Issue", "New", "Issue")</li>
+                        <li>@Html.ActionLink("Item(s)", "Index", "Item")</li>
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
