--- a/InventoryManagement.Web/Views/Shared/_Layout.cshtml
+++ b/InventoryManagement.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("New Issue", "New", "Issue")</li>
                         <li>@Html.ActionLink("Item(s)", "Index", "Item")</li>
+                        <li>@Html.ActionLink("Carton(s)", "Index", "Carton")</li>
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
