Add Model Inventory

--- a/InventoryManagement.Web/Views/Item/New.cshtml
+++ b/InventoryManagement.Web/Views/Item/New.cshtml
@@ -5,14 +5,14 @@
 }
 
 <h2>New Item</h2>
-@using (Html.BeginForm("New", "Item", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("New", "Piece", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
     @Html.EditorForModel()
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Add Item" class="btn btn-default" />
+            <input type="submit" value="Save Item" class="btn btn-default" />
         </div>
     </div>
 }
