--- a/InventoryManagement.Web/Views/Shared/_Layout.cshtml
+++ b/InventoryManagement.Web/Views/Shared/_Layout.cshtml
@@ -24,8 +24,9 @@
                     {
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("New Issue", "New", "Issue")</li>
-                        <li>@Html.ActionLink("Item(s)", "Index", "Item")</li>
+                        <li>@Html.ActionLink("Item(s)", "Index", "Piece")</li>
                         <li>@Html.ActionLink("Carton(s)", "Index", "Carton")</li>
+                        <li>@Html.ActionLink("Inventory Mangement", "Index", "Inventory")</li>
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
