--- a/InventoryManagement.Web/Views/Item/Index.cshtml
+++ b/InventoryManagement.Web/Views/Item/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <br/>
-<div>@Html.ActionLink("Setup Item", "New", "Item")</div>
+<div>@Html.ActionLink("Setup Item", "New", "Piece")</div>
 
 <h3>Item List</h3>
 <table class="table table-hover">
