--- a/InventoryManagement.Web/Views/Inventory/AddPiece.cshtml
+++ b/InventoryManagement.Web/Views/Inventory/AddPiece.cshtml
@@ -1,7 +1,36 @@
-﻿@model dynamic
+﻿@model InventoryManagement.Web.Models.Inventory.ItemInventory
 
 @{
     ViewBag.Title = "Add Piece";
 }
 
 <h2>Add Piece</h2>
+
+@using (Html.BeginForm("AddPiece", "Inventory", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true)
+
+    <div class="form-group">
+        @Html.BootstrapLabel("ItemList")
+        <div class="col-md-10">
+            @Html.DropDownListFor(m => m.ItemId, @Model.ItemList, new { @class = "form-control" })
+            @Html.ValidationMessage("ItemList")
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.BootstrapLabel("NumberOfPieces")
+        <div class="col-md-10">
+            @Html.Editor("NumberOfPieces")
+            @Html.ValidationMessage("NumberOfPieces")
+        </div>
+
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Add" class="btn btn-default" />
+        </div>
+    </div>
+}
