--- a/InventoryManagement.Web/Views/Inventory/Index.cshtml
+++ b/InventoryManagement.Web/Views/Inventory/Index.cshtml
@@ -139,8 +139,8 @@
                         }
 
                     },
-                    error: function (xhr) {
-                        alert('Network Error Connecting Server');
+                    error: function (req, status, error) {
+                        $alertAjaxError(req, status, "Coudn't Make Inventory for selected Item");
                     }
                 });
             });
@@ -151,6 +151,33 @@
 
             var hideBusyMessage = function () {
                 $('#processBlock').unblock();
+            }
+
+
+            function $alertAjaxError(jqXhr, status, logMsg) {
+                var message;
+                var statusErrorMap = {
+                    '400': "Server understood the request, but request content was invalid.",
+                    '401': "Unauthorized access.",
+                    '403': "Forbidden resource can't be accessed.",
+                    '500': "Internal server error.",
+                    '503': "Service unavailable."
+                };
+                if (jqXhr.status) {
+                    message = statusErrorMap[jqXhr.status];
+                    if (!message) {
+                        message = "Unknown Error \n.";
+                    }
+                } else if (status == 'parsererror') {
+                    message = "Error.\nParsing JSON Request failed.";
+                } else if (status == 'timeout') {
+                    message = "Request Time out.";
+                } else if (status == 'abort') {
+                    message = "Request was aborted by the server";
+                } else {
+                    message = "Unknown Error \n.";
+                }
+                alert(message + ',' + logMsg);
             }
 
         });
