--- a/InventoryManagement.Web/Views/Shared/_Layout.cshtml
+++ b/InventoryManagement.Web/Views/Shared/_Layout.cshtml
@@ -17,17 +17,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Inventory Management System", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Inventory Management System", "Index", "Inventory", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     @if (Request.IsAuthenticated)
                     {
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("New Issue", "New", "Issue")</li>
                         <li>@Html.ActionLink("Item(s)", "Index", "Item")</li>
                         <li>@Html.ActionLink("Carton(s)", "Index", "Carton")</li>
-                        <li>@Html.ActionLink("Inventory Mangement", "Index", "Inventory")</li>
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
