Clean Database Checkin

--- a/InventoryManagement.Web/Views/Carton/Index.cshtml
+++ b/InventoryManagement.Web/Views/Carton/Index.cshtml
@@ -16,9 +16,9 @@
 <table class="table table-hover">
     <thead>
         <tr>
-            <th>CartonId</th>
-            <th>ItemName</th>
-            <th>NumberOfPieces</th>
+            <th>Carton Id</th>
+            <th>Item Name</th>
+            <th>Number of Pieces</th>
             <th>Created At</th>
         </tr>
     </thead>
