--- a/InventoryManagement.Web/Views/Shared/_Layout.cshtml
+++ b/InventoryManagement.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     {
                         <li>@Html.ActionLink("Item(s)", "Index", "Item")</li>
                         <li>@Html.ActionLink("Carton(s)", "Index", "Carton")</li>
+                        <li>@Html.ActionLink("Inventory", "Index", "Inventory")</li>
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
